--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,35 +1,97 @@
-# Nombre del flujo de trabajo de GitHub
-name: Generate Snake Animation
+name: GitHub Snake Game
 
-# Controles para cuándo se ejecuta la acción
+
+
 on:
+
+  # Schedule the workflow to run daily at midnight UTC
+
   schedule:
-    - cron: "0 */12 * * *"
+
+    - cron: "0 0 * * *"
+
+
+
+  # Allow manual triggering of the workflow
+
   workflow_dispatch:
 
+
+
+  # Trigger the workflow on pushes to the main branch
+
+  push:
+
+    branches:
+
+      - main
+
+
+
 jobs:
-  build:
-    # ⬇️ LÍNEAS NUEVAS AÑADIDAS AQUÍ ⬇️
-    # Otorga permisos a la acción para leer el contenido del repositorio (necesario para las contribuciones)
-    permissions:
-      contents: read
-    
-    # El resto del archivo es el mismo
+
+  generate:
+
     runs-on: ubuntu-latest
+
+    timeout-minutes: 10
+
+
+
     steps:
-      - name: Generate Snake
+
+      # Step 1: Checkout the repository
+
+      - name: Checkout Repository
+
+        uses: actions/checkout@v3
+
+
+
+      # Step 2: Generate the snake animations
+
+      - name: Generate GitHub Contributions Snake Animations
+
         uses: Platane/snk@v3
+
         with:
-          github_user_name: emereson
+
+          # GitHub username to generate the animation for
+
+          github_user_name: ${{ github.repository_owner }}
+
+
+
+          # Define the output files and their configurations
+
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+
+            dist/github-snake.svg
+
+            dist/github-snake-dark.svg?palette=github-dark
+
             dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
 
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3
-        with:
-          target_branch: output
-          build_dir: dist
         env:
-          GITHUB_TOKEN: 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 
+
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+
+      # Step 3: Deploy the generated files to the 'output' branch
+
+      - name: Deploy to Output Branch
+
+        uses: peaceiris/actions-gh-pages@v3
+
+        with:
+
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+          publish_dir: ./dist
+
+          publish_branch: output
+
+          # Optionally, you can set a custom commit message
+
+          commit_message: "Update snake animation [skip ci]"
