--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,45 +1,36 @@
-# Nombre del flujo de trabajo de GitHub
-name: Generate Snake Animation
+name: GitHub Snake Game
 
-# Controles para cuándo se ejecuta la acción
 on:
-  # Ejecuta la acción automáticamente cada 12 horas
   schedule:
-    - cron: "0 */12 * * *"
-
-  # Permite ejecutar esta acción manualmente desde la pestaña Actions
+    - cron: "0 0 * * *"
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
-# Una secuencia de trabajos que se ejecutarán
 jobs:
-  # El trabajo de compilación que genera la animación
-  build:
-    # El tipo de máquina virtual en la que se ejecutará el trabajo
+  generate:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
-      # 1. Genera la animación
-      - name: Generate Snake
-        uses: Platane/snk@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Generate GitHub Contributions Snake Animations
+        uses: platane/snk@v3
         with:
-          # Tu nombre de usuario de GitHub
           github_user_name: ${{ github.repository_owner }}
-
-          # Lista de archivos de salida que se generarán
-          # El formato es: {directorio_salida}/{nombre_archivo}.{formato}
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-
-      # 2. Sube los archivos generados a la rama 'output'
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3
-        with:
-          # La rama a la que se subirán los archivos
-          target_branch: output
-          # El directorio que contiene los archivos a subir
-          build_dir: dist
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
         env:
-          # Token de acceso de GitHub para permitir la subida
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Deploy to Output Branch
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          publish_branch: output
+          commit_message: "Update snake animation [skip ci]"
